@@ -2,7 +2,7 @@
    $Id$
 
    Copyright 1993, 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003,
-   2004, 2007, 2008, 2009, 2011, 2012, 2013, 2014
+   2004, 2007, 2008, 2009, 2011, 2012, 2013, 2014, 2015
    Free Software Foundation, Inc.
 
    This program is free software: you can redistribute it and/or modify
@@ -2016,7 +2016,8 @@ info_select_reference (WINDOW *window, REFERENCE *entry)
           free (file_system_error);
         }
       else
-        info_error (msg_cant_find_node, entry->nodename);
+        info_error (msg_cant_find_node,
+                    entry->nodename ? entry->nodename : "Top");
       return 0;
     }
 
